@@ -267,6 +267,7 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
   static final JBValue EMPTY_ANNOTATION_AREA_WIDTH = JBVG.value(() -> (float)JBUI.CurrentTheme.Editor.Gutter.emptyAnnotationAreaWidth());
   static final JBValue GAP_AFTER_LINE_NUMBERS_WIDTH = JBVG.value(() -> (float)JBUI.CurrentTheme.Editor.Gutter.gapAfterLineNumbersWidth());
   private static final JBValue GAP_AFTER_ICONS_WIDTH = JBVG.value(() -> (float)JBUI.CurrentTheme.Editor.Gutter.gapAfterIconsWidth());
+  private static final JBValue INTER_LINE_SHIFT_AMOUNT = JBVG.value(3);
   private static final TooltipGroup GUTTER_TOOLTIP_GROUP = new TooltipGroup("GUTTER_TOOLTIP_GROUP", 0);
 
   private ClickInfo myLastActionableClick;
@@ -308,6 +309,7 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
   private final AlphaAnimationContext myAlphaContext = new AlphaAnimationContext(composite -> {
     if (isShowing()) repaint();
   });
+  private @Nullable InterLineShiftAnimator myCurrentInterLineAnimator = null;
   private boolean myHovered = false;
   private final @NotNull EventDispatcher<EditorGutterListener> myEditorGutterListeners = EventDispatcher.create(EditorGutterListener.class);
   private int myHoveredFreeMarkersLine = -1;
@@ -494,6 +496,8 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
         g.fillRect(clip.x, clip.y, clip.width, clip.height);
         return;
       }
+
+      updateInterLineShiftState();
 
       AffineTransform old = setMirrorTransformIfNeeded(g, 0, getWidth());
       if (old != null) {
@@ -707,6 +711,9 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
               y = viewportStartY + lineHeight;
             }
 
+            int visualLine = visLinesIterator.getVisualLine();
+            y += getInterLineShiftForVisualLine(visualLine);
+
             if (paintText || logicalLine == -1) {
               logicalLine = visLinesIterator.getDisplayedLogicalLine();
               bg = gutterProvider.getBgColor(logicalLine, myEditor);
@@ -904,6 +911,9 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
                 y = viewportStartY;
               }
             }
+
+            int visualLine = visLinesIterator.getVisualLine();
+            int yShifted = y + getInterLineShiftForVisualLine(visualLine);
             if (myEditor.isInDistractionFreeMode()) {
               Color fgColor = myTextFgColors.get(visLinesIterator.getVisualLine());
               g.setColor(fgColor != null ? fgColor : color != null ? color : JBColor.blue);
@@ -927,7 +937,11 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
                              ((GutterIconRenderer)r).getAlignment() == GutterIconRenderer.Alignment.LINE_NUMBERS)
                 .findFirst();
               if (breakpoint.isPresent()) {
-                iconOnTheLine = breakpoint.get().getIcon();
+                // Don't suppress line number if the icon is positioned between lines
+                GutterIconRenderer renderer = (GutterIconRenderer)breakpoint.get();
+                if (renderer.getVerticalAlignment() != GutterIconRenderer.VerticalAlignment.BETWEEN_LINES) {
+                  iconOnTheLine = breakpoint.get().getIcon();
+                }
               }
               if ((myAlphaContext.isVisible() || isGutterContextMenuShown()) &&
                   Objects.equals(getClientProperty("active.line.number"), logicalLine)) {
@@ -942,19 +956,28 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
               iconOnTheLine = null;
             }
 
-            if (iconOnTheLine == null && hoverIcon == null) {
+            Boolean isBetweenLines = (Boolean) getClientProperty("line.number.hover.between.lines");
+            boolean hoverIconBetweenLines = hoverIcon != null && isBetweenLines != null && isBetweenLines;
+
+            // Draw line number if no icon is on the line (inter-line hover icons don't suppress line numbers)
+            if (iconOnTheLine == null && (hoverIcon == null || hoverIconBetweenLines)) {
               int textOffset = isMirrored() ?
                                offset - getLineNumberAreaWidth() - 1 :
                                offset - FontLayoutService.getInstance().stringWidth(g.getFontMetrics(), lineToDisplay);
 
-              g.drawString(lineToDisplay, textOffset, y + myEditor.getAscent());
+              g.drawString(lineToDisplay, textOffset, yShifted + myEditor.getAscent());
             }
-            else if (hoverIcon != null && iconOnTheLine == null) {
+
+            // Draw hover icon if present
+            if (hoverIcon != null && iconOnTheLine == null) {
               Icon icon = scaleIcon(hoverIcon);
               int iconX = offset - icon.getIconWidth();
-              int iconY = y + (visLinesIterator.getLineHeight() - icon.getIconHeight()) / 2;
+
               float alpha = JBUI.getFloat("Breakpoint.iconHoverAlpha", 0.5f);
-              alpha = Math.max(0, Math.min(alpha, 1));
+              alpha = Math.clamp(alpha, 0, 1);
+              int iconY = hoverIconBetweenLines
+                          ? y - icon.getIconHeight() / 2
+                          : yShifted + (visLinesIterator.getLineHeight() - icon.getIconHeight()) / 2;
               GraphicsUtil.paintWithAlpha(g, alpha, () -> icon.paintIcon(this, g, iconX, iconY));
             }
           }
@@ -969,6 +992,102 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
 
   private int endLineNumber() {
     return Math.max(0, myDocument.getLineCount() - 1);
+  }
+
+  /**
+   * Updates the inter-line shift state based on current client properties.
+   * Should be called when hover state changes.
+   */
+  void updateInterLineShiftState() {
+    Object activeLine = getClientProperty("active.line.number");
+
+    if (!(activeLine instanceof Integer)) {
+      stopCurrentAnimator();
+      return;
+    }
+
+    InterLineBreakpointConfiguration configuration =
+      InterLineBreakpointConfigurationProvider.findConfigurationForLine(myEditor, (Integer)activeLine);
+    if (configuration == null || configuration.getAnimator() == null) {
+      stopCurrentAnimator();
+      return;
+    }
+
+    Boolean isBetweenLines = (Boolean)getClientProperty("line.number.hover.between.lines");
+
+    if (isBetweenLines == null || !isBetweenLines) {
+      stopCurrentAnimator();
+      return;
+    }
+
+    InterLineShiftAnimator animator = configuration.getAnimator();
+    myCurrentInterLineAnimator = animator;
+
+    int visualLineBelow = myEditor.logicalToVisualPosition(new LogicalPosition((int)activeLine, 0)).line;
+    int visualLineAbove = visualLineBelow > 0 ? visualLineBelow - 1 : -1;
+
+    int targetShift = calculateInterLineShiftAmount(visualLineAbove, visualLineBelow);
+    if (targetShift > 0) {
+      animator.startShift(visualLineAbove, visualLineBelow, targetShift);
+    }
+    else {
+      animator.stopShift();
+    }
+  }
+
+  private void stopCurrentAnimator() {
+    InterLineShiftAnimator animator = myCurrentInterLineAnimator;
+    if (animator != null) {
+      animator.stopShift();
+      myCurrentInterLineAnimator = null;
+    }
+  }
+
+  /**
+   * Calculates the target shift amount for inter-line expansion.
+   * Returns 0 if no shift is needed (e.g., there's already enough space from block inlays).
+   *
+   * @param visualLineAbove the visual line above the gap (-1 if none)
+   * @param visualLineBelow the visual line below the gap (-1 if none)
+   * @return the shift amount in pixels, or 0 if no shift is needed
+   */
+  private int calculateInterLineShiftAmount(int visualLineAbove, int visualLineBelow) {
+    int lineHeight = myEditor.getLineHeight();
+
+    if (visualLineAbove < 0 && visualLineBelow < 0) {
+      return 0;
+    }
+
+    int extraSpace = 0;
+    if (visualLineBelow >= 0) {
+      VisualLinesIterator iterator = new VisualLinesIterator(myEditor, visualLineBelow);
+      if (!iterator.atEnd()) {
+        for (Inlay<?> inlay : iterator.getBlockInlaysAbove()) {
+          extraSpace += inlay.getHeightInPixels();
+        }
+      }
+    }
+
+    if (extraSpace >= lineHeight * 1.5) {
+      return 0;
+    }
+
+    // Calculate shift amount based on JBUI-scaled constant
+    // Ensure the shift doesn't cause overlap with adjacent lines
+    int baseShift = INTER_LINE_SHIFT_AMOUNT.get();
+
+    int maxShift = lineHeight / 4;
+    return Math.min(baseShift, maxShift);
+  }
+
+  /**
+   * Gets the vertical shift offset for a given visual line.
+   * Negative values mean shift up, positive values mean shift down.
+   * Returns 0 if no animator is active (inter-line feature disabled).
+   */
+  int getInterLineShiftForVisualLine(int visualLine) {
+    InterLineShiftAnimator animator = myCurrentInterLineAnimator;
+    return animator != null ? animator.getShiftForVisualLine(visualLine) : 0;
   }
 
   @Override
@@ -1468,10 +1587,17 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
     int startOffset = highlighter.getStartOffset();
     int endOffset = highlighter.getEndOffset();
 
-    int startY = myEditor.visualLineToY(myEditor.offsetToVisualLine(startOffset));
-    int visualLine = myEditor.offsetToVisualLine(endOffset);
-    int blockInlaysBelowHeight = EditorUtil.getInlaysHeight(myEditor, visualLine, false);
-    int endY = myEditor.visualLineToYRange(visualLine)[1] + blockInlaysBelowHeight;
+    int startVisualLine = myEditor.offsetToVisualLine(startOffset);
+    int endVisualLine = myEditor.offsetToVisualLine(endOffset);
+
+    int startY = myEditor.visualLineToY(startVisualLine);
+    int blockInlaysBelowHeight = EditorUtil.getInlaysHeight(myEditor, endVisualLine, false);
+    int endY = myEditor.visualLineToYRange(endVisualLine)[1] + blockInlaysBelowHeight;
+
+    int startShift = getInterLineShiftForVisualLine(startVisualLine);
+    int endShift = getInterLineShiftForVisualLine(endVisualLine);
+    startY += startShift;
+    endY += endShift;
 
     LineMarkerRenderer renderer = Objects.requireNonNull(highlighter.getLineMarkerRenderer());
     LineMarkerRendererEx.Position position = getLineMarkerPosition(renderer);
@@ -1511,9 +1637,13 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
     processIconsRowForY(myEditor.visualLineToY(line), row, processor);
   }
 
-  // y should be equal to visualLineToY(visualLine)
   private void processIconsRowForY(int y, @NotNull List<? extends GutterMark> row, @NotNull LineGutterIconRendererProcessor processor) {
     if (row.isEmpty()) return;
+
+    int visualLine = myEditor.yToVisualLine(y);
+    int interLineShift = getInterLineShiftForVisualLine(visualLine);
+    int shiftedY = y + interLineShift;
+
     int middleCount = 0;
     int middleSize = 0;
     int x = getIconAreaOffset() + 2;
@@ -1527,15 +1657,24 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
       }
       switch (alignment) {
         case LEFT -> {
-          processor.process(x, y + getTextAlignmentShift(icon), r);
+          processor.process(x, shiftedY + getTextAlignmentShift(icon), r);
           x += icon.getIconWidth() + getGapBetweenIcons();
         }
         case CENTER -> {
           middleCount++;
           middleSize += icon.getIconWidth() + getGapBetweenIcons();
         }
-        case LINE_NUMBERS -> processor.process(getLineNumberAreaOffset() + getLineNumberAreaWidth() - icon.getIconWidth(),
-                                               y + getTextAlignmentShift(icon), r);
+        case LINE_NUMBERS -> {
+          int iconX = getLineNumberAreaOffset() + getLineNumberAreaWidth() - icon.getIconWidth();
+          int iconY = shiftedY + getTextAlignmentShift(icon);
+          // Check if the icon should be positioned between lines
+          GutterIconRenderer renderer = (GutterIconRenderer)r;
+          if (renderer.getVerticalAlignment() == GutterIconRenderer.VerticalAlignment.BETWEEN_LINES) {
+            // BETWEEN_LINES icons should NOT be shifted - they stay at the boundary
+            iconY = computeBetweenLinesIconY(visualLine, y, icon);
+          }
+          processor.process(iconX, iconY, r);
+        }
       }
     }
 
@@ -1547,7 +1686,7 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
       if (((GutterIconRenderer)r).getAlignment() == GutterIconRenderer.Alignment.RIGHT) {
         Icon icon = scaleIcon(r.getIcon());
         x -= icon.getIconWidth();
-        processor.process(x, y + getTextAlignmentShift(icon), r);
+        processor.process(x, shiftedY + getTextAlignmentShift(icon), r);
         x -= getGapBetweenIcons();
       }
     }
@@ -1561,7 +1700,7 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
         if (!checkDumbAware(r)) continue;
         if (((GutterIconRenderer)r).getAlignment() == GutterIconRenderer.Alignment.CENTER) {
           Icon icon = scaleIcon(r.getIcon());
-          processor.process(x, y + getTextAlignmentShift(icon), r);
+          processor.process(x, shiftedY + getTextAlignmentShift(icon), r);
           x += icon.getIconWidth() + getGapBetweenIcons();
         }
       }
@@ -1576,6 +1715,27 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
     int centerRelative = (myEditor.getLineHeight() - icon.getIconHeight()) / 2;
     int baselineRelative = myEditor.getAscent() - icon.getIconHeight();
     return Math.max(centerRelative, baselineRelative);
+  }
+
+  /**
+   * Computes the Y position for a BETWEEN_LINES icon.
+   * If there are above-line inlays, the icon is centered in the inlay area.
+   * Otherwise, it's positioned at the top boundary of the line.
+   */
+  private int computeBetweenLinesIconY(int visualLine, int lineY, @NotNull Icon icon) {
+    List<Inlay<?>> inlays = myEditor.getInlayModel().getBlockElementsForVisualLine(visualLine, true);
+    if (!inlays.isEmpty()) {
+      int totalInlayHeight = 0;
+      for (Inlay<?> inlay : inlays) {
+        totalInlayHeight += inlay.getHeightInPixels();
+      }
+      // Position the icon centered in the inlay area
+      int inlayAreaTop = lineY - totalInlayHeight;
+      int inlayAreaCenter = inlayAreaTop + totalInlayHeight / 2;
+      return inlayAreaCenter - icon.getIconHeight() / 2;
+    }
+    // No inlays - position at the top boundary of the line
+    return lineY - icon.getIconHeight() / 2;
   }
 
   private @NotNull Color getOutlineColor(boolean isActive) {
@@ -1692,11 +1852,13 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
   }
 
   private int getLineCenterY(int line) {
-    return myEditor.visualLineToY(line) + myEditor.getLineHeight() / 2;
+    int baseY = myEditor.visualLineToY(line) + myEditor.getLineHeight() / 2;
+    return baseY + getInterLineShiftForVisualLine(line);
   }
 
   private double getFoldAnchorY(int line, double width) {
-    return myEditor.visualLineToY(line) + myEditor.getAscent() - width;
+    double baseY = myEditor.visualLineToY(line) + myEditor.getAscent() - width;
+    return baseY + getInterLineShiftForVisualLine(line);
   }
 
   private void drawFoldingAnchor(@NotNull Graphics2D g, double width, @NotNull Rectangle clip, int visualLine,
@@ -1812,7 +1974,8 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
   }
 
   private int getFoldingIconY(int visualLine, @NotNull Icon icon) {
-    return (int)(myEditor.visualLineToY(visualLine) + (myEditor.getLineHeight() - icon.getIconHeight()) / 2f + 0.5f);
+    int baseY = (int)(myEditor.visualLineToY(visualLine) + (myEditor.getLineHeight() - icon.getIconHeight()) / 2f + 0.5f);
+    return baseY + getInterLineShiftForVisualLine(visualLine);
   }
 
   /**
@@ -2118,9 +2281,19 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
       TextAnnotationGutterProvider provider = getProviderAtPoint(point);
       String toolTip = null;
       if (provider == null) {
-        ActiveGutterRenderer lineRenderer = getActiveRendererByMouseEvent(e);
-        if (lineRenderer != null) {
-          toolTip = lineRenderer.getTooltipText();
+        // Check for line number hover tooltip first
+        Object hoverIcon = getClientProperty("line.number.hover.icon");
+        if (hoverIcon instanceof Icon && getClientProperty("active.line.number") != null) {
+          Object hoverTooltip = getClientProperty("line.number.hover.tooltip");
+          if (hoverTooltip instanceof String) {
+            toolTip = (String) hoverTooltip;
+          }
+        }
+        else {
+          ActiveGutterRenderer lineRenderer = getActiveRendererByMouseEvent(e);
+          if (lineRenderer != null) {
+            toolTip = lineRenderer.getTooltipText();
+          }
         }
       }
       else {
@@ -2269,6 +2442,9 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
     GutterIconRenderer renderer = getGutterRenderer(e);
     if (renderer != null) {
       if (renderer.isNavigateAction()) {
+        return Cursor.getPredefinedCursor(Cursor.HAND_CURSOR);
+      }
+      if (renderer.getAlignment() == GutterIconRenderer.Alignment.LINE_NUMBERS && renderer.getClickAction() != null) {
         return Cursor.getPredefinedCursor(Cursor.HAND_CURSOR);
       }
     }
@@ -2872,6 +3048,25 @@ final class EditorGutterComponentImpl extends EditorGutterComponentEx
         result[0].visualLine = line;
       }
       return result[0];
+    }
+    // Check for BETWEEN_LINES positioned LINE_NUMBERS icons
+    List<GutterMark> renderers = getGutterRenderers(line);
+    for (GutterMark r : renderers) {
+      if (r instanceof GutterIconRenderer renderer &&
+          renderer.getAlignment() == GutterIconRenderer.Alignment.LINE_NUMBERS &&
+          renderer.getVerticalAlignment() == GutterIconRenderer.VerticalAlignment.BETWEEN_LINES) {
+        Icon icon = scaleIcon(renderer.getIcon());
+        int iconX = getLineNumberAreaOffset() + getLineNumberAreaWidth() - icon.getIconWidth();
+        int iconY = computeBetweenLinesIconY(line, yRange[0], icon);
+        int iconCenterY = iconY + icon.getIconHeight() / 2;
+
+        if (cX >= iconX && cX <= iconX + icon.getIconWidth() &&
+            p.y >= iconY && p.y <= iconY + icon.getIconHeight()) {
+          PointInfo info = new PointInfo(renderer, new Point(iconX + icon.getIconWidth() / 2, iconCenterY));
+          info.visualLine = line;
+          return info;
+        }
+      }
     }
     if (myHasInlaysWithGutterIcons) {
       if (p.y < yRange[0]) {
